--- a/i18n/gui_realtime/zh_CN.json
+++ b/i18n/gui_realtime/zh_CN.json
@@ -1,1 +1,39 @@
-
+{
+    "SUPER": "SUPER",
+    "LANGUAGE": "zh_CN",
+    "选择模型文件":"选择模型文件",
+    "模型：.pt格式(config.yaml需在同目录下);或.ptc格式组合模型":"模型：.pt格式(config.yaml需在同目录下);或.ptc格式组合模型",
+    "选择配置文件所在目录":"选择配置文件所在目录",
+    "打开文件夹":"打开文件夹",
+    "读取配置文件":"读取配置文件",
+    "保存配置文件":"保存配置文件",
+    "快速配置文件":"快速配置文件",
+    "输入设备":"输入设备",
+    "输出设备":"输出设备",
+    "音频设备":"音频设备",
+    "说话人id":"说话人id",
+    "响应阈值":"响应阈值",
+    "变调":"变调",
+    "采样率":"采样率",
+    "启用捏音色功能":"启用捏音色功能",
+    "设置混合音色":"设置混合音色",
+    "普通设置":"普通设置",
+    "音频切分大小":"音频切分大小",
+    "交叉淡化时长":"交叉淡化时长",
+    "使用历史区块数量":"使用历史区块数量",
+    "f0预测模式":"f0预测模式",
+    "启用相位声码器":"启用相位声码器",
+    "切片设置":"切片设置",
+    "扩散深度":"扩散深度",
+    "扩散加速":"扩散加速",
+    "扩散算法":"扩散算法",
+    "不合成安全区(加速但损失效果)":"不合成安全区(加速但损失效果)",
+    "↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓":"↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓",
+    "!强烈建议使用组合模型浅扩散!":"!强烈建议使用组合模型浅扩散!",
+    "扩散设置":"扩散设置",
+    "开始音频转换":"开始音频转换",
+    "推理所用时间(ms):":"推理所用时间(ms):",
+    "停止音频转换":"停止音频转换",
+    "示例：1:0.3,2:0.5,3:0.2":"示例：1:0.3,2:0.5,3:0.2",
+    "设置混合音色，支持多人":"设置混合音色，支持多人"
+}
