--- a/Diffusion_SVC_CN.ipynb
+++ b/Diffusion_SVC_CN.ipynb
@@ -66,8 +66,9 @@
       "source": [
         "#@title 下载编码器、声码器\n",
         "!mkdir /content/Diffusion-SVC/pretrain/contentvec\n",
-        "!wget -P /content/Diffusion-SVC/pretrain -O /content/Diffusion-SVC/pretrain/contentvec/checkpoint_best_legacy_500.pt https://huggingface.co/OOPPEENN/encoder_model/resolve/main/checkpoint_best_legacy_500.pt\n",
-        "!wget -P /content/Diffusion-SVC/pretrain -O /content/Diffusion-SVC/pretrain/nsf_hifigan_20221211.zip https://github.com/openvpi/vocoders/releases/download/nsf-hifigan-v1/nsf_hifigan_20221211.zip\n",
+        "!mkdir /content/Diffusion-SVC/exp/naive-test\n",
+        "!wget -O /content/Diffusion-SVC/pretrain/contentvec/checkpoint_best_legacy_500.pt https://huggingface.co/OOPPEENN/encoder_model/resolve/main/hubert_base.pt\n",
+        "!wget -O /content/Diffusion-SVC/pretrain/nsf_hifigan_20221211.zip https://github.com/openvpi/vocoders/releases/download/nsf-hifigan-v1/nsf_hifigan_20221211.zip\n",
         "!unzip -o -d /content/Diffusion-SVC/pretrain /content/Diffusion-SVC/pretrain/nsf_hifigan_20221211.zip\n",
         "!rm -rf /content/Diffusion-SVC/pretrain/nsf_hifigan_20221211.zip"
       ]
@@ -92,8 +93,8 @@
       "outputs": [],
       "source": [
         "#@title 下载预训练模型，浅扩散，最大扩散深度100，网络大小512x30（推荐）\n",
-        "!wget -P /content/Diffusion-SVC/exp/diffusion-test https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_shallow_k100_512x30_model_0.pt\n",
-        "!wget -P /content/Diffusion-SVC/exp/diffusion-test https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_naive_model_0.pt"
+        "!wget -O /content/Diffusion-SVC/exp/diffusion-test/model_0.pt https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_shallow_k100_512x30_model_0.pt\n",
+        "!wget -O /content/Diffusion-SVC/exp/naive-test/model_0.pt https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_naive_model_0.pt"
       ]
     },
     {
@@ -106,8 +107,8 @@
       "outputs": [],
       "source": [
         "#@title 下载预训练模型，浅扩散，最大扩散深度200，网络大小512x20（推荐）\n",
-        "!wget -P /content/Diffusion-SVC/exp/diffusion-test https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_shallow_k200_512x20_model_0.pt\n",
-        "!wget -P /content/Diffusion-SVC/exp/diffusion-test https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_naive_model_0.pt"
+        "!wget -O /content/Diffusion-SVC/exp/diffusion-test/model_0.pt https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_shallow_k200_512x20_model_0.pt\n",
+        "!wget -O /content/Diffusion-SVC/exp/naive-test/model_0.pt https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_naive_model_0.pt"
       ]
     },
     {
@@ -120,8 +121,8 @@
       "outputs": [],
       "source": [
         "#@title 下载预训练模型，完整扩散，网络大小512x30\n",
-        "!wget -P /content/Diffusion-SVC/exp/diffusion-test https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_full_512x20_model_0.pt\n",
-        "!wget -P /content/Diffusion-SVC/exp/diffusion-test https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_naive_model_0.pt"
+        "!wget -O /content/Diffusion-SVC/exp/diffusion-test/model_0.pt https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_full_512x20_model_0.pt\n",
+        "!wget -O /content/Diffusion-SVC/exp/naive-test/model_0.pt https://huggingface.co/OOPPEENN/pretrained_model/resolve/main/contentvec768l12_naive_model_0.pt"
       ]
     },
     {
