--- a/i18n/gui_realtime/zh_CN.json
+++ b/i18n/gui_realtime/zh_CN.json
@@ -12,6 +12,7 @@
     "输出设备":"输出设备",
     "音频设备":"音频设备",
     "说话人id":"说话人id",
+    "使用hubert遮罩": "使用hubert遮罩",
     "响应阈值":"响应阈值",
     "变调":"变调",
     "采样率":"采样率",
