--- a/i18n/gui_realtime/zh_CN.json
+++ b/i18n/gui_realtime/zh_CN.json
@@ -21,7 +21,7 @@
     "普通设置":"普通设置",
     "音频切分大小":"音频切分大小",
     "交叉淡化时长":"交叉淡化时长",
-    "使用历史区块数量":"使用历史区块数量",
+    "额外推理时长":"额外推理时长",
     "f0预测模式":"f0预测模式",
     "启用相位声码器":"启用相位声码器",
     "切片设置":"切片设置",
