Add double quote

--- a/Diffusion_SVC_CN.ipynb
+++ b/Diffusion_SVC_CN.ipynb
@@ -255,7 +255,7 @@
         "decay_step = 20000  #@param {type:\"integer\"}\n",
         "\n",
         "#@markdown 将数据集缓存到内存或者显存中（优先显存，显存不够再用内存，还是不够就关闭缓存）\n",
-        "cache_device = cuda #@param ['cpu', 'cuda']\n",
+        "cache_device = \"cuda\" #@param ['cpu', 'cuda']\n",
         "\n",
         "#@markdown 将数据集缓存到显存或内存中（显存或内存爆炸可以关掉）\n",
         "cache_all_data = True #@param {type:\"boolean\"}\n",
@@ -323,7 +323,7 @@
         "decay_step = 10000  #@param {type:\"integer\"}\n",
         "\n",
         "#@markdown 将数据集缓存到内存或者显存中（优先显存，显存不够再用内存，还是不够就关闭缓存）\n",
-        "cache_device = cuda #@param ['cpu', 'cuda']\n",
+        "cache_device = \"cuda\" #@param ['cpu', 'cuda']\n",
         "\n",
         "#@markdown 将数据集缓存到显存或内存中（显存或内存爆炸可以关掉）\n",
         "cache_all_data = True #@param {type:\"boolean\"}\n",
@@ -396,7 +396,7 @@
         "decay_step = 100000  #@param {type:\"integer\"}\n",
         "\n",
         "#@markdown 将数据集缓存到内存或者显存中（优先显存，显存不够再用内存，还是不够就关闭缓存）\n",
-        "cache_device = cuda #@param ['cpu', 'cuda']\n",
+        "cache_device = \"cuda\" #@param ['cpu', 'cuda']\n",
         "\n",
         "#@markdown 将数据集缓存到显存或内存中（显存或内存爆炸可以关掉）\n",
         "cache_all_data = True #@param {type:\"boolean\"}\n",
