--- a/Diffusion_SVC_EN.ipynb
+++ b/Diffusion_SVC_EN.ipynb
@@ -255,7 +255,7 @@
         "decay_step = 20000  #@param {type:\"integer\"}\n",
         "\n",
         "#@markdown Cache the dataset in memory or on the GPU (prefer GPU, then memory, or disable caching if insufficient)\n",
-        "cache_device = cuda #@param ['cpu', 'cuda']\n",
+        "cache_device = \"cuda\" #@param ['cpu', 'cuda']\n",
         "\n",
         "#@markdown Cache the entire dataset in memory or on the GPU (disable if GPU or memory usage is excessive)\n",
         "cache_all_data = True #@param {type:\"boolean\"}\n",
@@ -323,7 +323,7 @@
         "decay_step = 10000  #@param {type:\"integer\"}\n",
         "\n",
         "#@markdown Cache the dataset in memory or on the GPU (prefer GPU, then memory, or disable caching if insufficient)\n",
-        "cache_device = cuda #@param ['cpu', 'cuda']\n",
+        "cache_device = \"cuda\" #@param ['cpu', 'cuda']\n",
         "\n",
         "#@markdown Cache the entire dataset in memory or on the GPU (disable if GPU or memory usage is excessive)\n",
         "cache_all_data = True #@param {type:\"boolean\"}\n",
@@ -396,7 +396,7 @@
         "decay_step = 100000  #@param {type:\"integer\"}\n",
         "\n",
         "#@markdown Cache the dataset in memory or on the GPU (prefer GPU, then memory, or disable caching if insufficient)\n",
-        "cache_device = cuda #@param ['cpu', 'cuda']\n",
+        "cache_device = \"cuda\" #@param ['cpu', 'cuda']\n",
         "\n",
         "#@markdown Cache the entire dataset in memory or on the GPU (disable if GPU or memory usage is excessive)\n",
         "cache_all_data = True #@param {type:\"boolean\"}\n",
